--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "bootstrap": "^5.3.0-alpha1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-toastify": "^9.1.1"
     }
 }
