--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "^18.2.0",
         "react-bootstrap": "^2.7.0",
         "react-dom": "^18.2.0",
-        "react-toastify": "^9.1.1"
+        "react-toastify": "^9.1.1",
+        "sweetalert2": "^11.4.8"
     }
 }
